# lottery-lab

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  alembic.ini  deploy.sh  lateral_tests_v3.py  lateral_tests_v4.py  pyproject.toml  rollback.sh  test_11_vicinanza_pura.py  version.json
backend/: auto_update.py  scheduler.py
backend/alembic/: env.py
backend/diecielotto/: analysis.py  analysis_deep.py  analysis_e.py  autocorr_tests.py  backtest_k.py  cli.py  cluster_verify.py  config.py  engine.py  engine10.py  engine_k.py  ev_calculator.py  lag_adjacency_test.py  prediction_lab.py  spatial_tests.py  strategy_advisor.py  strategy_lab.py  validation.py
backend/lotto_predictor/: api.py  auth.py  cli.py  config.py  deep_lotto_results.json
backend/millionday/: DEEP_REPORT.md  advisor.py  analysis.py  analysis_extended.py  deep_analysis.py  engine.py  ingestor.py  parse_cloud.py  window_sweep.py  window_sweep_results.json
backend/paper_trading/: service.py
backend/tests/: test_convergence_v2.py  test_cyclometry.py  test_filters.py  (+2 more)
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.local.yml  docker-compose.portainer.yml  docker-compose.prod.yml  entrypoint.sh  nginx.conf
docs/: ERROR_CONTRACT.md  QUALITY_STANDARDS.md  RESEARCH_PAPER.md  TECHNICAL_MANUAL.md  TECH_DEBT.md  USER_MANUAL.md
frontend/: package-lock.json  package.json  tailwind.config.ts
future/: README.md
runbooks/: incident-response.md  rollback.md
scripts/: autocorrelation_analysis.py  gambling_strategy_analysis.py  kfold_cv.py  research_gaps.py  strategy_report.txt
(+411 files in other folders)
